--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.43.1",
+    "typescript": "4.9.4",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0"
