--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@ignite-ui/react": "^2.2.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
