--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
