--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://root:docker@localhost:3306/igcall"
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET_ID=
 NEXTAUTH_SECRET=""
