--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["@rocketseat/eslint-config/react", "next/core-web-vitals"],
   "rules": {
-    "prettier/prettier": ["error", { "singleQuote": false }]
+    "prettier/prettier": "warn"
   }
 }
