--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.2.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/cookie": "^0.5.1",
+    "eslint-config-prettier": "^8.6.0",
     "prisma": "^4.10.1"
   }
 }
