--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
     "camelcase": "off",
     "no-unused-vars": "off",
     "spaced-comments": "off",
-    "duplicates": "off",
     "object-shorthand": "off",
-    "no-useless-return": "off"
+    "no-useless-return": "off",
+    "import/no-duplicates": "off"
   }
 }
